@@ -2,6 +2,8 @@
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ### 2018-04-22
+	Changed: How empty watchlist is detected.
+### 2018-04-22
 	Fixed: Retarded WinForms bug.
 ### 2018-04-18
 	Added: Health monitor now warns of low diskspace. Defaults to 150 MB.
